--- a/code/Machine_learning/my_test.ipynb
+++ b/code/Machine_learning/my_test.ipynb
@@ -14,16 +14,1022 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<_io.TextIOWrapper name='datingTestSet2.txt' mode='r' encoding='cp1252'>"
+       "(array([[4.0920000e+04, 8.3269760e+00, 9.5395200e-01],\n",
+       "        [1.4488000e+04, 7.1534690e+00, 1.6739040e+00],\n",
+       "        [2.6052000e+04, 1.4418710e+00, 8.0512400e-01],\n",
+       "        ...,\n",
+       "        [2.6575000e+04, 1.0650102e+01, 8.6662700e-01],\n",
+       "        [4.8111000e+04, 9.1345280e+00, 7.2804500e-01],\n",
+       "        [4.3757000e+04, 7.8826010e+00, 1.3324460e+00]]),\n",
+       " [3,\n",
+       "  2,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  2,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  1,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  1,\n",
+       "  1,\n",
+       "  2,\n",
+       "  3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  2,\n",
+       "  2,\n",
+       "  1,\n",
+       "  3,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  1,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  2,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  3,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  2,\n",
+       "  1,\n",
+       "  1,\n",
+       "  3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  1,\n",
+       "  3,\n",
+       "  3,\n",
+       "  2,\n",
+       "  1,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  3,\n",
+       "  3,\n",
+       "  2,\n",
+       "  3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  1,\n",
+       "  1,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  1,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  3,\n",
+       "  2,\n",
+       "  2,\n",
+       "  3,\n",
+       "  1,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  3,\n",
+       "  3,\n",
+       "  2,\n",
+       "  3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  2,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  2,\n",
+       "  1,\n",
+       "  1,\n",
+       "  3,\n",
+       "  2,\n",
+       "  3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  3,\n",
+       "  2,\n",
+       "  3,\n",
+       "  1,\n",
+       "  3,\n",
+       "  2,\n",
+       "  1,\n",
+       "  3,\n",
+       "  2,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  1,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  3,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  2,\n",
+       "  1,\n",
+       "  2,\n",
+       "  2,\n",
+       "  3,\n",
+       "  1,\n",
+       "  3,\n",
+       "  3,\n",
+       "  2,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  2,\n",
+       "  1,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  2,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  3,\n",
+       "  2,\n",
+       "  2,\n",
+       "  3,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  2,\n",
+       "  1,\n",
+       "  2,\n",
+       "  2,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  3,\n",
+       "  2,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  2,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  3,\n",
+       "  3,\n",
+       "  2,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  2,\n",
+       "  2,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  2,\n",
+       "  1,\n",
+       "  1,\n",
+       "  2,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  2,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  3,\n",
+       "  2,\n",
+       "  2,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  3,\n",
+       "  2,\n",
+       "  2,\n",
+       "  1,\n",
+       "  2,\n",
+       "  2,\n",
+       "  3,\n",
+       "  1,\n",
+       "  3,\n",
+       "  2,\n",
+       "  1,\n",
+       "  1,\n",
+       "  3,\n",
+       "  3,\n",
+       "  2,\n",
+       "  3,\n",
+       "  3,\n",
+       "  2,\n",
+       "  3,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  3,\n",
+       "  2,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  3,\n",
+       "  2,\n",
+       "  1,\n",
+       "  2,\n",
+       "  2,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  3,\n",
+       "  3,\n",
+       "  2,\n",
+       "  2,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  3,\n",
+       "  3,\n",
+       "  2,\n",
+       "  2,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  3,\n",
+       "  2,\n",
+       "  1,\n",
+       "  1,\n",
+       "  3,\n",
+       "  2,\n",
+       "  1,\n",
+       "  1,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  3,\n",
+       "  2,\n",
+       "  2,\n",
+       "  1,\n",
+       "  2,\n",
+       "  1,\n",
+       "  3,\n",
+       "  2,\n",
+       "  1,\n",
+       "  3,\n",
+       "  2,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  2,\n",
+       "  1,\n",
+       "  1,\n",
+       "  2,\n",
+       "  1,\n",
+       "  3,\n",
+       "  3,\n",
+       "  2,\n",
+       "  1,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  1,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  1,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  2,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  2,\n",
+       "  3,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  2,\n",
+       "  2,\n",
+       "  1,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  3,\n",
+       "  2,\n",
+       "  3,\n",
+       "  3,\n",
+       "  2,\n",
+       "  2,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  2,\n",
+       "  1,\n",
+       "  2,\n",
+       "  2,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  3,\n",
+       "  3,\n",
+       "  2,\n",
+       "  3,\n",
+       "  3,\n",
+       "  2,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  2,\n",
+       "  3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  2,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  2,\n",
+       "  1,\n",
+       "  1,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  1,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  1,\n",
+       "  3,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  1,\n",
+       "  1,\n",
+       "  2,\n",
+       "  3,\n",
+       "  1,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  1,\n",
+       "  2,\n",
+       "  2,\n",
+       "  1,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  1,\n",
+       "  3,\n",
+       "  3,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  1,\n",
+       "  1,\n",
+       "  3,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  3,\n",
+       "  3,\n",
+       "  2,\n",
+       "  2,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  3,\n",
+       "  3,\n",
+       "  2,\n",
+       "  2,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  3,\n",
+       "  2,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  3,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  2,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  2,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  2,\n",
+       "  1,\n",
+       "  2,\n",
+       "  3,\n",
+       "  3,\n",
+       "  2,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  2,\n",
+       "  3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  3,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  1,\n",
+       "  2,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  2,\n",
+       "  1,\n",
+       "  2,\n",
+       "  2,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  2,\n",
+       "  2,\n",
+       "  3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  2,\n",
+       "  2,\n",
+       "  3,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  3,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  2,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  2,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  2,\n",
+       "  2,\n",
+       "  1,\n",
+       "  1,\n",
+       "  2,\n",
+       "  1,\n",
+       "  2,\n",
+       "  1,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  1,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  3,\n",
+       "  3,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  1,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  3,\n",
+       "  3,\n",
+       "  2,\n",
+       "  1,\n",
+       "  3,\n",
+       "  2,\n",
+       "  1,\n",
+       "  3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  1,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  1,\n",
+       "  1,\n",
+       "  2,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  2,\n",
+       "  1,\n",
+       "  3,\n",
+       "  2,\n",
+       "  1,\n",
+       "  3,\n",
+       "  3,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  1,\n",
+       "  2,\n",
+       "  2,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  2,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  3,\n",
+       "  2,\n",
+       "  2,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  3,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  3,\n",
+       "  2,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  3,\n",
+       "  2,\n",
+       "  2,\n",
+       "  1,\n",
+       "  1,\n",
+       "  3,\n",
+       "  3,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  1,\n",
+       "  2,\n",
+       "  1,\n",
+       "  2,\n",
+       "  1,\n",
+       "  3,\n",
+       "  2,\n",
+       "  1,\n",
+       "  2,\n",
+       "  2,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  1,\n",
+       "  2,\n",
+       "  1,\n",
+       "  2,\n",
+       "  3,\n",
+       "  3,\n",
+       "  2,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  1,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  3,\n",
+       "  2,\n",
+       "  1,\n",
+       "  2,\n",
+       "  1,\n",
+       "  2,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  1,\n",
+       "  2,\n",
+       "  2,\n",
+       "  1,\n",
+       "  1,\n",
+       "  2,\n",
+       "  3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  3,\n",
+       "  3,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  3,\n",
+       "  3,\n",
+       "  2,\n",
+       "  2,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  3,\n",
+       "  3,\n",
+       "  2,\n",
+       "  1,\n",
+       "  2,\n",
+       "  1,\n",
+       "  1,\n",
+       "  2,\n",
+       "  2,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  2,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  2,\n",
+       "  1,\n",
+       "  2,\n",
+       "  3,\n",
+       "  1,\n",
+       "  3,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  3,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  1,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,15 +1042,15 @@
     "    classLabelVector = []                       #prepare labels return   \n",
     "    fr = open(filename)\n",
     "    index = 0\n",
-    "#     for line in fr.readlines():\n",
-    "#         line = line.strip()\n",
-    "#         listFromLine = line.split('\\t')\n",
-    "#         returnMat[index,:] = listFromLine[0:3]\n",
-    "#         classLabelVector.append(int(listFromLine[-1]))\n",
-    "#         index += 1\n",
+    "    for line in fr.readlines():\n",
+    "        line = line.strip()\n",
+    "        listFromLine = line.split('\\t')\n",
+    "        returnMat[index,:] = listFromLine[0:3]\n",
+    "        classLabelVector.append(int(listFromLine[-1]))\n",
+    "        index += 1\n",
     "    return returnMat,classLabelVector\n",
     "\n",
-    "file2matrix('datingTestSet2.txt')\n"
+    "file2matrix('datingTestSet2.txt')"
    ]
   },
   {
