--- a/code/Machine_learning/my_test.ipynb
+++ b/code/Machine_learning/my_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,9 +21,9 @@
     "def file2matrix(filename):\n",
     "    fr = open(filename)\n",
     "    numberOfLines = len(fr.readlines())         #get the number of lines in the file ，return 1000, numberoflines=1000\n",
-    "    returnMat = zeros((numberOfLines,3))        #prepare matrix to return\n",
+    "    returnMat = zeros((numberOfLines,3))        #prepare matrix to return,zeros(1000,3) em\n",
     "    classLabelVector = []                       #prepare labels return   \n",
-    "    fr = open(filename)\n",
+    "    fr = open(filename)                         #need to reopen again\n",
     "    index = 0\n",
     "    for line in fr.readlines():\n",
     "        line = line.strip()\n",
@@ -32,27 +32,14 @@
     "        classLabelVector.append(int(listFromLine[-1]))\n",
     "        index += 1\n",
     "    return returnMat,classLabelVector\n",
-    "\n",
-    "file2matrix('datingTestSet2.txt')"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'zeros' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-b1e27a6c1238>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mfiles\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreadlines\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mlength\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfiles\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreadlines\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mclassLabelVector\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mzeros\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m100\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'zeros' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "files=open('datingTestSet2.txt')\n",
     "files.readlines()\n",
