--- a/code/Machine_learning/my_test.ipynb
+++ b/code/Machine_learning/my_test.ipynb
@@ -32,7 +32,20 @@
     "        classLabelVector.append(int(listFromLine[-1]))\n",
     "        index += 1\n",
     "    return returnMat,classLabelVector\n",
-    "\n"
+    "\n",
+    "def classify0(inX, dataSet, labels, k):\n",
+    "    dataSetSize = dataSet.shape[0]\n",
+    "    diffMat = tile(inX, (dataSetSize,1)) - dataSet\n",
+    "    sqDiffMat = diffMat**2\n",
+    "    sqDistances = sqDiffMat.sum(axis=1)\n",
+    "    distances = sqDistances**0.5\n",
+    "    sortedDistIndicies = distances.argsort()     \n",
+    "    classCount={}          \n",
+    "    for i in range(k):\n",
+    "        voteIlabel = labels[sortedDistIndicies[i]]\n",
+    "        classCount[voteIlabel] = classCount.get(voteIlabel,0) + 1\n",
+    "    sortedClassCount = sorted(classCount.iteritems(), key=operator.itemgetter(1), reverse=True)\n",
+    "    return sortedClassCount[0][0]\n"
    ]
   },
   {
@@ -64,8 +77,17 @@
     }
    ],
    "source": [
-    "classLabelVector = zeros(100)\n",
-    "classLabelVector"
+    "    dataSetSize = dataSet.shape[0]\n",
+    "    diffMat = tile(inX, (dataSetSize,1)) - dataSet\n",
+    "    sqDiffMat = diffMat**2\n",
+    "    sqDistances = sqDiffMat.sum(axis=1)\n",
+    "    distances = sqDistances**0.5\n",
+    "    sortedDistIndicies = distances.argsort()     \n",
+    "    classCount={}          \n",
+    "    for i in range(k):\n",
+    "        voteIlabel = labels[sortedDistIndicies[i]]\n",
+    "        classCount[voteIlabel] = classCount.get(voteIlabel,0) + 1\n",
+    "    sortedClassCount = sorted(classCount.iteritems(), key=operator.itemgetter(1), reverse=True)"
    ]
   },
   {
@@ -74,8 +96,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "returnMat=zeros((length,3)) \n",
-    "returnMat[:10]"
+    "group = array([[1.0,1.1],[1.0,1.0],[0,0],[0,0.1]])\n",
+    "labels = ['A','A','B','B']\n",
+    "dataSet = group\n",
+    "inX =[0,0]\n",
+    "sortedDistIndicies = distances.argsort() \n",
+    "k=5\n",
+    "dataSetSize = dataSet.shape[0]\n",
+    "diffMat = tile(inX, (dataSetSize,1)) - dataSet\n",
+    "sqDiffMat = diffMat**2\n",
+    "sqDistances = sqDiffMat.sum(axis=1)\n",
+    "distances = sqDistances**0.5\n",
+    "sortedDistIndicies = distances.argsort()     \n",
+    "classCount={}                   \n",
+    "    for i in range(k):\n",
+    "        voteIlabel = labels[sortedDistIndicies[i]]\n",
+    "        classCount[voteIlabel] = classCount.get(voteIlabel,0) + 1\n",
+    "sortedClassCount = sorted(classCount.iteritems(), key=operator.itemgetter(1), reverse=True)"
    ]
   }
  ],
