--- a/code/Machine_learning/KNN.ipynb
+++ b/code/Machine_learning/KNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
     "        returnMat[index,:] = listFromLine[0:3]\n",
     "        classLabelVector.append(int(listFromLine[-1]))\n",
     "        index += 1\n",
-    "    return returnMat,classLabelVector\n",
+    "    return returnMat,classLabelVectorgenetic\n",
     "\n",
     "def autoNorm(dataSet):\n",
     "    minVals = dataSet.min(0)\n",
