--- a/code/DATA1.ipynb
+++ b/code/DATA1.ipynb
@@ -138,88 +138,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 131,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>x</th>\n",
-       "      <th>y</th>\n",
-       "      <th>label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1.109</td>\n",
-       "      <td>1.26364</td>\n",
-       "      <td>A</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2.78522</td>\n",
-       "      <td>2.77057</td>\n",
-       "      <td>A</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1.40948</td>\n",
-       "      <td>1.74879</td>\n",
-       "      <td>A</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1.44078</td>\n",
-       "      <td>2.34063</td>\n",
-       "      <td>A</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1.81159</td>\n",
-       "      <td>2.44522</td>\n",
-       "      <td>A</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         x        y label\n",
-       "0    1.109  1.26364     A\n",
-       "1  2.78522  2.77057     A\n",
-       "2  1.40948  1.74879     A\n",
-       "3  1.44078  2.34063     A\n",
-       "4  1.81159  2.44522     A"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data.shape[0]\n",
     "df=data\n",
-    "df.head()"
+    "df.head()\n",
+    "df.to_excel(\"output.xlsx\")x"
    ]
   },
   {
@@ -258,23 +184,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "can't assign to function call (<ipython-input-115-373e2d91faf7>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-115-373e2d91faf7>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    X_train(i) =df.iloc[i][0],df.iloc[i][1]\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m can't assign to function call\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([1.40948354, 1.74878933])"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "np.array([df.iloc[i][0],df.iloc[i][1]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1.4094835404109087, 1.7487893260361167]"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[df.iloc[i][0],df.iloc[i][1]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.10900414, 1.26363914],\n",
+       "       [2.78522425, 2.7705749 ],\n",
+       "       [1.40948354, 1.74878933],\n",
+       "       [0.        , 0.        ],\n",
+       "       [0.        , 0.        ],\n",
+       "       [0.        , 0.        ],\n",
+       "       [0.        , 0.        ],\n",
+       "       [0.        , 0.        ],\n",
+       "       [0.        , 0.        ],\n",
+       "       [0.        , 0.        ],\n",
+       "       [0.        , 0.        ],\n",
+       "       [0.        , 0.        ],\n",
+       "       [0.        , 0.        ],\n",
+       "       [0.        , 0.        ],\n",
+       "       [0.        , 0.        ],\n",
+       "       [0.        , 0.        ],\n",
+       "       [0.        , 0.        ],\n",
+       "       [0.        , 0.        ],\n",
+       "       [0.        , 0.        ],\n",
+       "       [0.        , 0.        ]])"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=np.zeros((20, 2))\n",
     "for i in range(0, 3):    \n",
-    "    X_train(i) =df.iloc[i][0],df.iloc[i][1]\n",
+    "     a[i] =df.iloc[i][0],df.iloc[i][1]\n",
     "#     y_train[i] =df.iloc[i][2]\n",
-    "X_train"
+    "a"
    ]
   },
   {
