--- a/code/Machine_learning/my_test.ipynb
+++ b/code/Machine_learning/my_test.ipynb
@@ -2,36 +2,82 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "import operator\n",
-    "import matplotlib\n",
+    "from os import listdir\n",
+    "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "from numpy import *"
+    "%matplotlib inline\n",
+    "\n",
+    "%matplotlib inline\n",
+    "\n",
+    "# #set font size of labels on matplotlib plots\n",
+    "# plt.rc('font', size=16)\n",
+    "\n",
+    "# #set style of plots\n",
+    "# sns.set_style('white')\n",
+    "\n",
+    "# #define a custom palette\n",
+    "# customPalette = ['#630C3A', '#39C8C6', '#D3500C', '#FFB139']\n",
+    "# sns.set_palette(customPalette)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 A\n",
+      "1 B\n"
+     ]
+    }
+   ],
    "source": [
-    "def file2matrix(filename):\n",
-    "    fr = open(filename)\n",
-    "    numberOfLines = len(fr.readlines())         #get the number of lines in the file ，return 1000, numberoflines=1000\n",
-    "    returnMat = zeros((numberOfLines,3))        #prepare matrix to return,zeros(1000,3) em\n",
-    "    classLabelVector = []                       #prepare labels return   \n",
-    "    fr = open(filename)                         #need to reopen again\n",
-    "    index = 0\n",
-    "    for line in fr.readlines():\n",
-    "        line = line.strip()\n",
-    "        listFromLine = line.split('\\t')\n",
-    "        returnMat[index,:] = listFromLine[0:3]\n",
-    "        classLabelVector.append(int(listFromLine[-1]))\n",
-    "        index += 1\n",
-    "    return returnMat,classLabelVector\n",
+    "def createDataSet(length=10):\n",
+    "#     group = array([[1.0,1.1],[1.0,1.0],[0,0],[0,0.1]])\n",
+    "#     labels = ['A','A','B','B']\n",
+    "    #number of points per group\n",
+    "    n = length\n",
+    "\n",
+    "    #define group labels and their centers\n",
+    "    groups = {'A': (2,2),\n",
+    "              'B': (4,4)}\n",
+    "\n",
+    "    #create labeled x and y data\n",
+    "    data = pd.DataFrame(index=range(n*len(groups)), columns=['x','y','label'])\n",
+    "    for i, group in enumerate(groups.keys()):\n",
+    "    #randomly select n datapoints from a gaussian distrbution\n",
+    "        print(i,group)\n",
+    "        data.loc[i*n:((i+1)*n)-1,['x','y']] = np.random.normal(groups[group], \n",
+    "                                                           [0.5,0.5], \n",
+    "                                                           [n,2])\n",
+    "        #add group labels\n",
+    "        data.loc[i*n:((i+1)*n)-1,['label']] = group\n",
+    "    #plot data with seaborn\n",
+    "    # df = data\n",
+    "    # print(data)\n",
+    "    dataset = np.zeros((n*2,2))\n",
+    "    labels  = ['A']\n",
+    "\n",
+    "    for i in range(1,n*2):\n",
+    "        dataset[i] = [data.at[i,'x'],data.at[i,'y']]\n",
+    "        labels+=[data.at[i,'label']]\n",
+    "    #     print(dataset[i],labels)\n",
+    "    dataset[0]=[data.at[0,'x'],data.at[0,'y']]\n",
+    "    #     print(dataset,labels)\n",
+    "    group = dataset\n",
+    "    labels =labels\n",
+    "    return group, labels\n",
+    "\n",
     "\n",
     "def classify0(inX, dataSet, labels, k):\n",
     "    dataSetSize = dataSet.shape[0]\n",
@@ -44,8 +90,40 @@
     "    for i in range(k):\n",
     "        voteIlabel = labels[sortedDistIndicies[i]]\n",
     "        classCount[voteIlabel] = classCount.get(voteIlabel,0) + 1\n",
-    "    sortedClassCount = sorted(classCount.iteritems(), key=operator.itemgetter(1), reverse=True)\n",
-    "    return sortedClassCount[0][0]\n"
+    "    sortedClassCount = sorted(classCount.items(), key=operator.itemgetter(1), reverse=True)\n",
+    "    return sortedClassCount[0][0]\n",
+    "\n",
+    "\n",
+    "dataSet,labels =createDataSet(10)\n",
+    "# print(labels)\n",
+    "xa= [2,2]\n",
+    "a= classify0(xa,dataSet,labels,3)\n",
+    "# a= [2,2]\n",
+    "# classifierResult = classify0(a,dataSet,labels,3)\n",
+    "# print(classifierResult)\n",
+    "# print(a)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 1]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a= [1,1]\n",
+    "a"
    ]
   },
   {
@@ -132,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
