--- a/code/sympy_test.ipynb
+++ b/code/sympy_test.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,10 @@
     "z = Symbol('z')\n",
     "a = Symbol('a')\n",
     "b = Symbol('b')\n",
-    "c = Symbol('c')"
+    "c = Symbol('c')\n",
+    "t = Symbol('t')\n",
+    "w_1 = Symbol('w_1')\n",
+    "w_2 = Symbol('w_2')"
    ]
   },
   {
@@ -30,6 +33,47 @@
    "source": [
     "\n",
     "f = (2/3)*x**2+(1/3)*x**2+x+x+1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sin(t*w_1)*sin(t*w_2)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f=sin(w_1*t)*sin(w_2*t)\n",
+    "f.simplify()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4*sin(t*w_1 + z)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f.simplify()"
    ]
   },
   {
